[package]
name = "quantum-encryptor"
version = "0.1.0"
edition = "2021"
authors = ["mahezat <taze41@gmail.com>"]
description = "A CLI tool that encrypts payloads using quantum encryption techniques"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
aes-gcm = "0.10.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
colored = "2.0.0"
sha2 = "0.10.6"
